--- a/Quake2Sharp/Quake2Sharp.csproj
+++ b/Quake2Sharp/Quake2Sharp.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <OutputType>Exe</OutputType>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <OutputType>exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="OpenTK" Version="4.6.3" />
+        <PackageReference Include="OpenTK" Version="4.7.4" />
     </ItemGroup>
 
 </Project>
