--- a/Quake2Sharp/Properties/launchSettings.json
+++ b/Quake2Sharp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "Quake2Sharp": {
       "commandName": "Project",
-      "workingDirectory": "$(ProjectDir)"
+      "workingDirectory": "$(SolutionDir)"
     }
   }
 }
