--- a/QResourceServer/appsettings.json
+++ b/QResourceServer/appsettings.json
@@ -2,8 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ResourceAccessSettings": {
+    "ResourceUri": "",
+    "ClientSecret": "",
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "ClientId": "69d618ab-8c02-4732-83a8-4004ac88b3aa"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "ClientId": "69d618ab-8c02-4732-83a8-4004ac88b3aa",
+    "Audience": "api://69d618ab-8c02-4732-83a8-4004ac88b3aa",
+    "AllowWebApiToBeAuthorizedByACL" : true
+  }
 }
