--- a/Quake2Sharp/appsettings.json
+++ b/Quake2Sharp/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "ResourceUri": "",
-  "ResourceAccessSettings": {
+  "AccessSettings": {
     "ResourceUri": "",
+    "ResourceEntities": "",
     "ClientSecret": "",
     "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
     "ClientId": "69d618ab-8c02-4732-83a8-4004ac88b3aa"
